--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.1"
-
+    buildToolsVersion '23.0.1'
     defaultConfig {
         applicationId "de.blue_robot.dreamy"
-        minSdkVersion 17
-        targetSdkVersion 21
+        minSdkVersion 18
+        targetSdkVersion 23
         versionCode 1
         versionName "0.0.1"
     }
@@ -17,13 +16,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 repositories {
     maven { url "https://jitpack.io" }
 }
 dependencies {
     compile 'com.github.adnan-SM:TimelyTextView:1.0'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:21.0.3'
 }
