added basic implementation for settings activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.blue_robot.dreamy">
 
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
@@ -23,6 +22,9 @@
                 <action android:name="android.service.dreams.DreamService" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <meta-data
+                android:name="android.service.dream"
+                android:resource="@xml/dreamy_dream" />
         </service>
 
         <service
@@ -32,6 +34,8 @@
                 <action android:name="android.service.notification.NotificationListenerService" />
             </intent-filter>
         </service>
+
+        <activity android:name="CustomDreamSettingsActivity"></activity>
 
     </application>
 
