--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "de.blue_robot.dreamy"
         minSdkVersion 23
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "0.0.1"
     }
@@ -18,13 +18,31 @@ android {
     }
     productFlavors {
     }
+    compileOptions {
+        targetCompatibility 1.7
+        sourceCompatibility 1.7
+    }
 }
 repositories {
     maven { url "https://jitpack.io" }
 }
+
+apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+
+
 dependencies {
-    compile 'com.github.adnan-SM:TimelyTextView:1.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.google.dagger:dagger:2.4'
+    apt 'com.google.dagger:dagger-compiler:2.4'
+    provided 'javax.annotation:jsr250-api:1.0'
+    compile 'com.github.adnan-SM:TimelyTextView:1.0'
+    compile 'javax.inject:javax.inject:1'
+    compile 'com.google.code.gson:gson:2.7'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
+    testApt "com.google.dagger:dagger-compiler:2.4"
 }
+
+
+
