--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion '24.0.0'
     defaultConfig {
-        applicationId "de.blue_robot.dreamy"
+        applicationId "de.dreamy"
         minSdkVersion 23
         targetSdkVersion 24
         versionCode 1
