--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.blue_robot.dreamy">
+    package="de.dreamy">
 
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
+        android:name=".DreamyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,7 +15,7 @@
 
 
         <service
-            android:name=".RobotDaydream"
+            android:name=".DreamyDaydream"
             android:exported="true"
             android:label="@string/daydream_name"
             android:permission="android.permission.BIND_DREAM_SERVICE">
@@ -35,7 +36,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name="CustomDreamSettingsActivity"></activity>
+        <activity android:name=".settings.DreamySettingsActivity"></activity>
 
     </application>
 
