implemented settings for ending daydream on click on clock and displaying notifications. show notification access menu if requesting to show notificatoins

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".settings.DreamySettingsActivity"></activity>
+        <activity android:name=".settings.DreamySettingsActivity"/>
 
     </application>
 
