added logging of system variable

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         jcenter()
     }
 }
+logger.warn("$System.env.bamboo_KEYSTORE_PASSWORD")
 
 task clean(type: Delete) {
     delete rootProject.buildDir
